--- a/cssmain.css
+++ b/cssmain.css
@@ -1,3 +1,5 @@
+
+
 body{
 	font-family: Lato;
 	font-size: 17px;
@@ -69,37 +71,12 @@ body{
 
 .tile-wish4{
 	text-align: left;
-	font-size: 20px;
+	font-size: 16px;
 	color: #333;
+	border-bottom: 1px #eee solid;
+	padding-bottom: 15px;
 }
 
-/*
-.icon-circle{
-	position: absolute;
-	bottom: 5%;
-	right: 5%;
-	height: 40px;
-	width: 40px;
-	background-color: rgba(5,5,5,0.8);
-	border-radius: 40px;
-	font-size: 20px;
-	text-align: center;
-	line-height: 40px;
-}*/
-.icon-circle{
-	margin-left: 10%;
-	margin-right: 10%;
-	padding-left: 10px; 
-	padding-right: 10px; 
-	position: absolute;
-	bottom: 5%;
-	width: 80%;
-	background-color: rgba(5,5,5,0.8);
-	border-radius: 20px;
-	font-size: 20px;
-	text-align: center;
-	line-height: 40px;
-}
 .tile-title{
 	font-size: 40px;
 	text-align: center;
@@ -110,49 +87,61 @@ body{
 	padding: 10px;
 	border-radius: 5px;
 	background-color: #eee;
+	display: flex; 
+}
+.card p {
+  flex: 1 0 auto;
 }
 .card{
 	padding: 20px;
 	background: #fff;
-	height: 600px;
+	display: flex;
+   flex-direction: column;
+   width: 100%;
 }
 .tile-descrip {
 	text-align: left;
 }
+.tile-group{
+	display: flex;
+	flex-wrap: wrap;
+	padding-bottom: 50px;
+
+}
 .buttony{
-	position: absolute;
-	bottom: 5%;
-	left: 5%;
-	width: 90%;
+	text-align: center;
+	width: 100%;
 	font-size: 16px;
+	margin-top: 20px;
 }
 
 .minicard1{
 	font-size: 15px;
 	padding: 0;
 	margin: 0;
-	position: absolute;
-	bottom: 15%;
-	right: 5%;
 }
 
 .minicard2{
 	font-size: 15px;
 	padding: 0;
 	margin: 0;
-	position: absolute;
-	bottom: 15%;
-	left: 5%;
 }
-
-.fa-battery-0{
-	color: #c0392b;
+.genies{
+	padding: 30px;
+	background: #333;
 }
-
-.fa-battery-2{
-	color: #f1c40f;
+.genie-name{
+	margin-top: 40px;
+	margin-left: 40px;
+	font-size: 30px;
+	text-align: left;
 }
-
-.fa-battery-4{
-	color: #27ae60;
+.genie-tile{
+	border-radius: 5px;
+	background: #eee;
+	margin: 2px;
+}
+.genie-message{
+	font-size: 17px;
+	color: #666;
 }
